--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+
     <!-- Base application theme. -->
     <style name="Base.Theme.LeafIDE" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="android:statusBarColor">#FFFEFBFF</item>
         <item name="colorAccent">#FF4D5C92</item>
         <item name="android:textColorHighlight">#664D5C92</item>
         <item name="colorPrimary">#FF4D5C92</item>
@@ -33,5 +33,18 @@
         <item name="colorOutlineVariant">#FFCAC4D0</item>
     </style>
 
-    <style name="Theme.LeafIDE" parent="Base.Theme.LeafIDE" />
+    <style name="Theme.LeafIDE" parent="Base.Theme.LeafIDE">
+        <item name="android:windowLayoutInDisplayCutoutMode" tools:ignore="NewApi">shortEdges</item>
+    </style>
+
+    <style name="Theme.LeafIDE.SplashScreen" parent="Theme.SplashScreen.IconBackground">
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_splash_screen</item>
+        <item name="postSplashScreenTheme">@style/Theme.LeafIDE</item>
+        <item name="windowSplashScreenBackground">@color/colorSurface</item>
+        <item name="windowSplashScreenIconBackgroundColor">@android:color/transparent</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowLightStatusBar" tools:ignore="NewApi">@bool/windowLightStatusBar
+        </item>
+    </style>
+
 </resources>
