--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.LeafIDE" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:statusBarColor">#FF1B1B1F</item>
         <item name="colorAccent">#FFB6C4FF</item>
         <item name="android:textColorHighlight">#66B6C4FF</item>
         <item name="colorPrimary">#FFB6C4FF</item>
