--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -2,56 +2,19 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:animateLayoutChanges="true">
+    android:layout_height="match_parent">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="15dp"
-        app:defaultNavHost="false"
-        app:layout_constraintBottom_toTopOf="@+id/nextButton"
+        app:defaultNavHost="true"
+
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/nav_main" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/prevButton"
-        style="@style/Widget.Material3.Button.IconButton.Filled"
-        android:layout_width="65dp"
-        android:layout_height="65dp"
-        android:layout_margin="15dp"
-        android:visibility="gone"
-        app:icon="@drawable/baseline_arrow_back_24"
-        app:iconGravity="textEnd"
-        app:iconSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/nextButton"
-        style="@style/Widget.Material3.Button.IconButton.Filled"
-        android:layout_width="65dp"
-        android:layout_height="65dp"
-        android:layout_margin="15dp"
-        app:icon="@drawable/baseline_arrow_forward_24"
-        app:iconGravity="textEnd"
-        app:iconSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <com.google.android.material.progressindicator.LinearProgressIndicator
-        android:id="@+id/linearProgressIndicator"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
-        android:max="3"
-        android:progress="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
