--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -9,43 +9,35 @@
         android:id="@+id/welcomeFragment"
         android:name="com.mucheng.leafide.fragment.setup.WelcomeFragment"
         android:label="WelcomeFragment"
-        tools:layout="@layout/fragment_welcome" />
-
-    <action
-        android:id="@+id/action_global_welcomeFragment"
-        app:destination="@id/welcomeFragment"
-        app:enterAnim="@anim/nav_default_enter_anim"
-        app:exitAnim="@anim/nav_default_exit_anim"
-        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-        app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+        tools:layout="@layout/fragment_welcome" >
+        <action
+            android:id="@+id/action_welcomeFragment_to_permissionRequestFragment"
+            app:destination="@id/permissionRequestFragment"
+            app:enterAnim="@anim/enter_anim"
+            app:exitAnim="@anim/exit_anim"
+            app:popEnterAnim="@anim/enter_anim"
+            app:popExitAnim="@anim/exit_anim" />
+    </fragment>
 
     <fragment
         android:id="@+id/permissionRequestFragment"
         android:name="com.mucheng.leafide.fragment.setup.PermissionRequestFragment"
         android:label="PermissionRequestFragment"
-        tools:layout="@layout/fragment_permission_request" />
-
-    <action
-        android:id="@+id/action_global_permissionRequestFragment"
-        app:destination="@id/permissionRequestFragment"
-        app:enterAnim="@anim/nav_default_enter_anim"
-        app:exitAnim="@anim/nav_default_exit_anim"
-        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-        app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+        tools:layout="@layout/fragment_permission_request" >
+        <action
+            android:id="@+id/action_permissionRequestFragment_to_launcherOptionsFragment"
+            app:destination="@id/launcherOptionsFragment"
+            app:enterAnim="@anim/enter_anim"
+            app:exitAnim="@anim/exit_anim"
+            app:popEnterAnim="@anim/enter_anim"
+            app:popExitAnim="@anim/exit_anim" />
+    </fragment>
 
     <fragment
         android:id="@+id/launcherOptionsFragment"
         android:name="com.mucheng.leafide.fragment.setup.LauncherOptionsFragment"
         android:label="LauncherOptionsFragment"
         tools:layout="@layout/fragment_launcher_options" />
-
-    <action
-        android:id="@+id/action_global_launcherOptionsFragment"
-        app:destination="@id/launcherOptionsFragment"
-        app:enterAnim="@anim/nav_default_enter_anim"
-        app:exitAnim="@anim/nav_default_exit_anim"
-        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-        app:popExitAnim="@anim/nav_default_pop_exit_anim" />
 
 
 </navigation>
