--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
 
     <!-- Base application theme. -->
     <style name="Base.Theme.LeafIDE" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="android:statusBarColor">#FFFEFBFF</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="colorAccent">#FF4D5C92</item>
         <item name="android:textColorHighlight">#664D5C92</item>
         <item name="colorPrimary">#FF4D5C92</item>
